# sentinel

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  BASELINE_RESULTS.md  DATASET.md  DEMO_RUNNER_PROMPT.md  Dockerfile  GUARDRAIL_ENV_PRD (2).md  GUARDRAIL_ENV_PRD_v5.md  README.md  RESULTS.md  ROUND2_PRD.md  ROUND2_PROBLEM_STATEMENTS.md  SENTINEL_MASTER_PROMPT.md  TRAINING_PIPELINE.md  TRAINING_STRATEGY.md  VALIDATION_TESTS_UPDATED.md  baseline.py  baseline_degenerate.py  blog_final.md  blog_post.md  blog_post_hf.md  blog_ready.md  check_secrets.py  context.md  demo.bat  demo.html  demo.sh  demo_populate.py  demo_runner.html  fix_unicode.py  generate_charts.py  hackathon_simulation_test.py  individual_study_guides.md  inference.py  leaderboard.json  llama_baseline_output.txt  make_slides_charts.py  openenv.yaml  (+31 more)
guardrail-arena/: .gitignore  AGENTS.md  BASELINE_RESULTS.md  CHANGELOG.md  CONTEXT.md  DATASET.md  README.md  baseline.py  baseline_claude.py  baseline_degenerate.py  baseline_gemini.py  baseline_oracle.py  inference.py  leaderboard.json  openenv.yaml  pre_submit_check.py  pyproject.toml  requirements.txt  train_agent.py  train_task4.py  validate.py
guardrail-arena/app/: environment.py  grader.py  main.py  models.py  reward.py  utils.py
guardrail-arena/app/tasks/: __init__.py  task1_basic.py  task1_basic_expanded.py  task2_context.py  task2_context_expanded.py  task3_multiturn.py  task_config.py  (+2 more)
guardrail-arena/server/: app.py
guardrail-arena/tests/: conftest.py  test_api.py  test_environment.py  test_graders.py  test_hash_split.py  test_reward.py
(+65 files in other folders)
