[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel"
version = "1.0.0"
description = "An OpenEnv-spec RL environment for training AI content safety agents."
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.0",
    "pydantic==2.9.0",
    "httpx==0.27.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.setuptools.package-data]
app = ["py.typed"]
