[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guardrail-arena"
version = "1.0.0"
description = "An OpenEnv-spec RL environment for training AI content safety agents."
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.0",
    "pydantic==2.9.0",
    "httpx==0.27.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "app.server:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]
